<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingVertical="20sp"
    android:paddingHorizontal="10sp"
    android:orientation="horizontal"
    android:layoutDirection="ltr">

    <FrameLayout
        android:gravity="start"
        android:id="@+id/col2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingHorizontal="10dp">

        <ImageView
            android:layout_width="fill_parent" android:layout_height="fill_parent"
            android:src="@drawable/ibad_logo" android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ccffffff"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id ="@+id/date_hijri"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textFontWeight="900"/>

                <TextView
                    android:layout_width="15dp"
                    android:layout_height="match_parent"
                    android:text = ""
                    android:id ="@+id/date_spacer"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textFontWeight="900"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:id ="@+id/date_gregorian"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textFontWeight="900"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingHorizontal="10sp"
                android:id = "@+id/chronometer_label"
                android:textSize="25sp"
                android:textFontWeight="900"
                android:textColor="@color/black"
                />

            <Chronometer
                android:id="@+id/chronometer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />


        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <LinearLayout
            android:id="@+id/fajr_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_background"
            android:paddingVertical="5dp"
            android:paddingHorizontal="15dp">

            <TextView
                android:id="@+id/fajr_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/fajr"
                android:textAlignment="textStart"
                android:textColor="@color/black"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/fajr_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"

                android:textAlignment="textEnd"
                android:textColor="@color/black"

                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sunrise_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/design_default_color_background"
            android:paddingVertical="5dp"
            android:paddingHorizontal="15dp">

            <TextView
                android:id="@+id/sunrise_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/sunrise"
                android:textAlignment="textStart"
                android:textColor="@color/black"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/sunrise_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"

                android:textAlignment="textEnd"
                android:textColor="@color/black"

                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dhuhr_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/design_default_color_background"
            android:paddingVertical="5dp"
            android:paddingHorizontal="15dp">

            <TextView
                android:id="@+id/dhuhr_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/dhuhr"
                android:textAlignment="textStart"
                android:textColor="@color/black"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/dhuhr_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"

                android:textAlignment="textEnd"
                android:textColor="@color/black"

                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/asr_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/design_default_color_background"
            android:paddingVertical="5dp"
            android:paddingHorizontal="15dp">

            <TextView
                android:id="@+id/asr_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/asr"
                android:textAlignment="textStart"
                android:textColor="@color/black"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/asr_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"

                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/maghrib_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/design_default_color_background"
            android:paddingVertical="5dp"
            android:paddingHorizontal="15dp">

            <TextView
                android:id="@+id/maghrib_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/maghrib"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/maghrib_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"

                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ishaa_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/design_default_color_background"
            android:paddingVertical="5dp"
            android:paddingHorizontal="15dp">

            <TextView
                android:id="@+id/ishaa_label"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/ishaa"
                android:textAlignment="textStart"
                android:textColor="@color/black"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/ishaa_value"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"

                android:textAlignment="textEnd"
                android:textColor="@color/black"

                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>




<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    style="@style/Widget.IbadAndroid.AppWidget.Container"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:theme="@style/Theme.PublicSector.AppWidgetContainer">-->

<!--    <TextView-->
<!--        android:id="@+id/appwidget_text"-->
<!--        style="@style/Widget.IbadAndroid.AppWidget.InnerView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_centerVertical="true"-->
<!--        android:layout_margin="8dp"-->
<!--        android:contentDescription="@string/appwidget_text"-->
<!--        android:text="@string/appwidget_text"-->
<!--        android:textSize="24sp"-->
<!--        android:textStyle="bold|italic" />-->
<!--</RelativeLayout>-->
